linux (4.15~rc5-1~exp1) UNRELEASED; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Update support patchset to aufs4.x-rcN-20171218
  * lockdown: Update patchset to 2017-11-10 version

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 26 Dec 2017 16:25:55 +0000

linux (4.14.7-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.14.3
    - [s390x] fix transactional execution control register handling
    - [s390x] noexec: execute kexec datamover without DAT
    - [s390x] runtime instrumention: fix possible memory corruption
    - [s390x] guarded storage: fix possible memory corruption
    - [s390x] disassembler: add missing end marker for e7 table
    - [s390x] disassembler: increase show_code buffer size
    - ACPI / PM: Fix acpi_pm_notifier_lock vs flush_workqueue() deadlock
    - ACPI / EC: Fix regression related to triggering source of EC event
      handling
    - cpufreq: schedutil: Reset cached_raw_freq when not in sync with next_freq
    - serdev: fix registration of second slave
    - sched: Make resched_cpu() unconditional
    - lib/mpi: call cond_resched() from mpi_powm() loop
    - [x86] boot: Fix boot failure when SMP MP-table is based at 0
    - [x86] decoder: Add new TEST instruction pattern
    - [amd64] entry: Fix entry_SYSCALL_64_after_hwframe() IRQ tracing
    - [x86] perf: intel: Hide TSX events when RTM is not supported
    - [arm64] Implement arch-specific pte_access_permitted()
    - [armhf/armmp-lpae] 8722/1: mm: make STRICT_KERNEL_RWX effective for LPAE
    - [armhf/armmp-lpae] 8721/1: mm: dump: check hardware RO bit for LPAE
    - uapi: fix linux/tls.h userspace compilation error
    - uapi: fix linux/rxrpc.h userspace compilation errors
    - [mips*/4kc-malta] cmpxchg64() and HAVE_VIRT_CPU_ACCOUNTING_GEN don't work
      for 32-bit SMP
    - [armhf,arm64] net: mvneta: fix handling of the Tx descriptor counter