@@ -17,7 +17,7 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  	uint64_t len;
  	int i, ret;
  
-+	if (kernel_is_locked_down())
++	if (kernel_is_locked_down("Command line-specified device addresses"))
 +		return -EPERM;
 +
  	if (strnlen(val, sizeof(buf)) >= sizeof(buf))
@@ -25,11 +25,11 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  
 --- a/drivers/mtd/devices/slram.c
 +++ b/drivers/mtd/devices/slram.c
-@@ -230,6 +230,9 @@ static int parse_cmdline(char *devname,
+@@ -231,6 +231,9 @@ static int parse_cmdline(char *devname,
  	unsigned long devstart;
  	unsigned long devlength;
  
-+	if (kernel_is_locked_down())
++	if (kernel_is_locked_down("Command line-specified device addresses"))
 +		return -EPERM;
 +
  	if ((!devname) || (!szstart) || (!szlength)) {
