@@ -5,6 +5,8 @@ linux (4.15~rc5-1~exp1) UNRELEASED; urgency=medium
   [ Ben Hutchings ]
   * aufs: Update support patchset to aufs4.x-rcN-20171218
   * lockdown: Update patchset to 2017-11-10 version
+  * lockdown: Update calls to kernel_is_locked_down() in "mtd: Disable slram and
+    phram when locked down"
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 26 Dec 2017 16:25:55 +0000
 
